<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>2.1.8.RELEASE</version>
		<relativePath /> <!-- lookup parent from repository -->
	</parent>
	
	<groupId>guru.springframework</groupId>
	<artifactId>wzh-pet-clinic</artifactId>
	<version>0.0.4</version>
	
	<name>wzh-pet-clinic</name>
	<description>ZIHAN Pet Clinic Project</description>

	<properties>
		<java.version>11</java.version>
		<jaxb.version>2.3.0</jaxb.version>
		<maven.compiler.source>${java.version}</maven.compiler.source>
        <maven.compiler.target>${java.version}</maven.compiler.target>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
		<start-class>guru.springframework.wzhpetclinic.WzhPetClinicApplication</start-class>
	</properties>

	<modules>
        <module>pet-clinic-data</module>
        <module>pet-clinic-web</module>
    </modules>


    <packaging>pom</packaging>
    
	<dependencies>

	</dependencies>

	<build>
		<plugins>
			<plugin>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-maven-plugin</artifactId>
			</plugin>
			<plugin>
			    <groupId>org.apache.maven.plugins</groupId>
			    <artifactId>maven-release-plugin</artifactId>
			    <configuration>
			        <goals>install</goals>
			        <autoVersionSubmodules>true</autoVersionSubmodules>
			    </configuration>
			</plugin>
			  <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <configuration>
                    <argLine>
                        --illegal-access=permit
                    </argLine>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-failsafe-plugin</artifactId>
                <configuration>
                    <argLine>
                        --illegal-access=permit
                    </argLine>
                </configuration>
                <executions>
                    <execution>
                        <goals>
                            <goal>integration-test</goal>
                            <goal>verify</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
		</plugins>
	</build>
	
	<scm>
	<developerConnection>
	scm:git:https://github.com/Zihan-Wang/wzh-pet-clinic.git
	</developerConnection>
	  <tag>wzh-pet-clinic-0.0.4</tag>
  </scm>

</project>